--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "test.js",
   "scripts": {
     "start": "node test.js",
     "dev": "nodemon index.js"
