--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@headlessui/react": "^2.1.2",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
