--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
     "@headlessui/react": "^2.1.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
@@ -22,7 +23,9 @@
     "react-easy-crop": "^5.0.8",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.22.3"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
